feat(deps): Update project dependencies and scripts
This commit upgrades the project's dependencies to their latest versions, including React, React Router DOM, and development tools like Vite and TypeScript. It also introduces several new scripts in `package.json` to streamline development and deployment workflows:

- `lint`: For running ESLint to check code quality.
- `server`: To start the Express backend server.
- `db:push`: To apply Prisma schema changes to the database.
- `db:seed`: To seed the database with initial data.
- `db:studio`: To launch the Prisma Studio GUI.

Additionally, it updates the `index.html` to reflect the new ESM imports for various libraries. The `AuthContext` and `OrderContext` have been refactored to utilize the new `api` utility for server communication, replacing direct local storage access for user and order data respectively. The `ProductContext` now fetches products from the API and includes a loading state.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,44 @@
+
 {
-  "name": "yapee",
+  "name": "yapee-ecommerce",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "server": "ts-node-esm server/index.ts",
+    "db:push": "prisma db push",
+    "db:seed": "ts-node-esm server/seed.ts",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-router-dom": "^7.11.0",
-    "react-dom": "^19.2.3"
+    "@prisma/client": "^5.10.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
+    "prisma": "^5.10.2",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.5"
   }
 }
