--- a/.env
+++ b/.env
@@ -2,8 +2,11 @@
 PORT=5000
 NODE_ENV=development
 
-# Database Connection (SQLite for local development)
-DATABASE_URL="file:./dev.db"
+# Database Connection (Neon PostgreSQL)
+DATABASE_URL="postgresql://neondb_owner:npg_biu5kptxKzB0@ep-blue-band-a1j7bcxi-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+
+# SQLite (fallback for local development)
+# DATABASE_URL="file:./dev.db"
 
 # Redis Connection (optional - if not available, caching will be skipped)
 REDIS_URL="redis://localhost:6379"
